--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -75,6 +75,7 @@
     <Compile Include="PartModules\KSPWheelConstraints.cs" />
     <Compile Include="PartModules\KSPWheelDamage.cs" />
     <Compile Include="PartModules\KSPWheelDebug.cs" />
+    <Compile Include="PartModules\KSPWheelDeployCollider.cs" />
     <Compile Include="PartModules\KSPWheelDeployment.cs" />
     <Compile Include="PartModules\KSPWheelDustEffects.cs" />
     <Compile Include="PartModules\KSPWheelExtension.cs" />
