add a few features needed by the updated KF parts

--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -97,6 +97,7 @@
     <Compile Include="PartModules\KSPWheelTextureSwitch.cs" />
     <Compile Include="PartModules\KSPWheelTracks.cs" />
     <Compile Include="PartModules\KSPWheelTransformRemoval.cs" />
+    <Compile Include="PartModules\KSPWheelTreadDirection.cs" />
     <Compile Include="PartModules\KSPWheelWaterPropulsion.cs" />
     <Compile Include="PartModules\Utils.cs" />
     <Compile Include="PartModules\WheelAnimationHandler.cs" />
